--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
